chore: add api.security.token.secret to Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
-
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.filter=true
+
+api.security.token.secret=a-secret-key
