feat(properties): add spring jackson property to don't include null values in JSON response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.filter=true
 
 api.security.token.secret=a-secret-key
+
+spring.jackson.default-property-inclusion=non_null
