properties: use MySQL database instead of H2 Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,26 @@
 spring.application.name=bancosil
 
-# Configurações do H2 (Banco em Memória)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
+# Configurações do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bancosil?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=@Kel851762
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configurações do JPA/Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=false
 
-logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.orm.jdbc.bind=OFF
-
-logging.level.com.orizon.system=INFO
-logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.filter=true
 
-api.security.token.secret=a-secret-key
+api.security.token.secret=my-secret-key
 
 spring.jackson.default-property-inclusion=non_null
